generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

//
// IMPORTANT:
// Prisma 7 DOES NOT support multi-file schema imports.
// All models must live in this single file.
//

enum RestaurantStatus {
  ACTIVE
  INACTIVE
  SUSPENDED
}

/* =========================
   RESTAURANTS
========================= */
model Restaurant {
  id        String @id @default(uuid())
  slug      String @unique

  name      String
  legalName String?
  taxId     String?

  email     String?
  phone     String?
  website   String?

  addressLine1 String?
  city          String?
  country       String?

  timezone String @default("Europe/Madrid")
  currency String @default("EUR")
  locale   String @default("es-ES")

  defaultReservationDuration Int @default(90)
  slotIntervalMinutes        Int @default(30)
  bufferTimeMinutes          Int @default(10)

  maxCapacity Int?

  allowWaitlist Boolean @default(true)
  autoConfirm   Boolean @default(true)

  status RestaurantStatus @default(ACTIVE)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  deletedAt DateTime?

  users            User[]
  whatsappAccounts WhatsappAccount[]
  customers   Customer[]
  reservations Reservation[]
  tables        RestaurantTable[]
  openingHours  OpeningHour[]
  blockedDates  BlockedDate[]
  capacityRules CapacityRule[]
  zones         RestaurantZone[]
  @@map("restaurants")
}

/* =========================
   USERS
========================= */
enum UserRole {
  OWNER
  MANAGER
  STAFF
  ADMIN
  PLATFORM_ADMIN
}

model User {
  id String @id @default(uuid())

  restaurantId String
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id])

  email    String
  passwordHash String

  firstName String?
  lastName  String?

  role UserRole @default(MANAGER)

  isActive Boolean @default(true)

  failedLoginAttempts Int @default(0)
  lockedUntil DateTime?

  lastLoginAt DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relación inversa con el token de recuperación
  passwordResetTokens PasswordResetToken[]

  @@unique([restaurantId, email])
  @@index([restaurantId])
  @@map("users")
}

/* =========================
   PASSWORD RESET TOKENS (Granular B2B)
========================= */
model PasswordResetToken {
  id        String   @id @default(uuid())
  tokenHash String   @unique // Hash del token para mitigar filtraciones si la base de datos se compromete
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade) // Borrado automático inteligente

  isUsed    Boolean  @default(false)
  expiresAt DateTime

  createdAt DateTime @default(now())

  @@index([userId])
  @@index([tokenHash, expiresAt]) // Índice compuesto para búsquedas de validación optimizadas
  @@map("password_reset_tokens")
}

/* =========================
   CUSTOMERS
========================= */
model Customer {
  id String @id @default(uuid())

  restaurantId String
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id])

  firstName String?
  lastName  String?

  phone String
  email String?

  preferredLanguage String @default("es")

  notes String?

  totalReservations Int @default(0)
  lastReservationAt DateTime?

  reservations Reservation[]

  active Boolean @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([restaurantId, phone])
  @@index([restaurantId])
  @@index([phone])
  @@index([firstName])
  @@index([lastName])
  @@map("customers")
}

/* =========================
   RESERVATIONS
========================= */
enum ReservationStatus {
  PENDING
  CONFIRMED
  CANCELLED
  COMPLETED
  NO_SHOW
}

enum ReservationSource {
  WHATSAPP
  DASHBOARD
  PHONE
  WALK_IN
  API
}

model Reservation {
  id String @id @default(uuid())

  restaurantId String
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id])

  customerId String
  customer   Customer @relation(fields: [customerId], references: [id])

  reservationDate DateTime
  reservationStart DateTime
  reservationEnd   DateTime

  guestCount Int

  status ReservationStatus @default(PENDING)
  source ReservationSource @default(WHATSAPP)

  notes String?

  confirmationCode String? @unique

  confirmedAt DateTime?
  cancelledAt DateTime?
  completedAt DateTime?
  noShowAt DateTime?
  assignedTables ReservationTable[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  deletedAt DateTime?

  @@index([restaurantId])
  @@index([customerId])
  @@index([status])
  @@index([reservationDate])
  @@map("reservations")
}

/* =========================
   AVAILABILITY
========================= */
enum DayOfWeek {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}

model RestaurantTable {
  id String @id @default(uuid())

  restaurantId String
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id])

  name String
  capacity Int

  zoneId String?
    zone   RestaurantZone? @relation(fields: [zoneId], references: [id])

  active Boolean @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([restaurantId, name])
  reservations   ReservationTable[]
  @@index([restaurantId])
  @@index([zoneId])
  @@map("restaurant_tables")
}

/* =========================
   WHATSAPP (MVP LIGHT)
========================= */
enum WhatsappAccountStatus {
  ACTIVE
  INACTIVE
  SUSPENDED
}

model WhatsappAccount {
  id String @id @default(uuid())

  restaurantId String
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id])

  phoneNumber String @unique

  displayName String?

  status WhatsappAccountStatus @default(ACTIVE)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([restaurantId])
  @@map("whatsapp_accounts")
}

/* =========================
   OPENING HOURS
========================= */
model OpeningHour {
  id           String    @id @default(uuid())
  restaurantId String
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id])

  dayOfWeek DayOfWeek
  openTime  String
  closeTime String
  isClosed  Boolean   @default(false)
  active    Boolean   @default(true)

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  @@unique([restaurantId, dayOfWeek])
  @@index([restaurantId, dayOfWeek])
  @@map("opening_hours")
}

/* =========================
   BLOCKED DATES
========================= */
model BlockedDate {
  id           String    @id @default(uuid())
  restaurantId String
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id])

  date      DateTime
  reason    String?
  startTime String?
  endTime   String?
  active    Boolean  @default(true)

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  @@unique([restaurantId, date])
  @@index([restaurantId, date])
  @@map("blocked_dates")
}

/* =========================
   CAPACITY RULES
========================= */
model CapacityRule {
  id           String    @id @default(uuid())
  restaurantId String
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id])

  maxGuestsPerReservation Int?
  maxReservationsPerSlot  Int?
  slotDurationMinutes     Int     @default(120)
  bufferMinutes           Int     @default(15)
  maxDailyCapacity        Int?
  overbookingAllowed      Boolean @default(false)
  active                  Boolean @default(true)

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  @@unique([restaurantId])
  @@index([restaurantId, active])
  @@map("capacity_rules")
}

/* =========================
   RESERVATION TABLES (join)
========================= */
model ReservationTable {
  reservationId String
  tableId       String

  assignedAt   DateTime @default(now())
  autoAssigned Boolean  @default(true)

  reservation Reservation     @relation(fields: [reservationId], references: [id])
  table       RestaurantTable  @relation(fields: [tableId], references: [id])

  @@id([reservationId, tableId])
  @@index([tableId])
  @@map("reservation_tables")
}

/* =========================

/* =========================
   WHATSAPP AUDIT LOGS (Failed Attempts)
========================= */
model WhatsappInboundLog {
  id              String   @id @default(uuid())
  rawPhoneNumber  String
  isValid         Boolean  @default(false)
  reason          String
  errorMessage    String
  payload         Json
  createdAt       DateTime @default(now())

  @@index([rawPhoneNumber])
  @@index([createdAt])
  @@map("whatsapp_inbound_logs")
}

/* =========================
   RESTAURANT ZONES (Floor Plan Layout)
========================= */
model RestaurantZone {
  id           String   @id @default(uuid())
  restaurantId String
  restaurant   Restaurant @relation(fields: [restaurantId], references: [id])
  
  name         String
  priority     Int      @default(1) // Permite priorizar qué zonas llenar primero (ej: 1 = Salón, 2 = Terraza)
  active       Boolean  @default(true)
  
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  tables       RestaurantTable[]

  @@unique([restaurantId, name])
  @@index([restaurantId])
  @@map("restaurant_zones")
}
